--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,10 +19,11 @@
       <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/dashboard">dashboard</a> |
+        <a href="/dashboard">dashboard</a> 
         <button class="no-button" id="logout">logout</button>
         {{else}}
-        <a href="/account">login</a>
+        <a href="/login">login</a>
+        <a href="/signUp">create account</a>
         {{/if}}
       </nav>
     </header>
