--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,7 @@
         <a href="/dashboard">dashboard</a> 
         <button class="no-button" id="logout">logout</button>
         {{else}}
+        <a href="/">home</a>
         <a href="/login">login</a>
         <a href="/signUp">create account</a>
         {{/if}}
