added to handlebars files

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,7 +4,7 @@
     <h2>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
       {{!-- {{{get_emoji}}} --}}
-      <a href="/project/{{post.id}}">{{post.title}}</a>
+      <a href="../models/Post.js">{{post.title}}</a>
     </h2>
      <p>
       {{!-- <span for="img" aria-label="money">💲</span> --}}
