--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,6 +23,7 @@
         <button class="no-button" id="logout">logout</button>
         {{else}}
         <a href="/">home</a>
+        <a href="/dashboard">dashboard</a> 
         <a href="/login">login</a>
         <a href="/signUp">create account</a>
         {{/if}}
