--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,12 @@
-<h1>heading on dashboard page</h1>
+<h1>this is the dashboard page</h1>
 
-{{!-- display the posts only from the user who is logged in --}}
+{{!-- display the posts only from the user who is logged in 
+if they are not logged in, display links to the login page and the create account page--}}
+
+{{#if logged_in}}
+<p>this is where the logged in user's posts will be displayed</p>
+
+{{else}}
+<a href="/login">login</a>
+<a href="/signUp">create account</a>
+{{/if}}
