--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,7 @@
 {{#each posts as |post| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
+    <h1>this is the homepage</h1>
     <h2>
       <!-- Call helper function with triple brackets to render the emoji span as HTML -->
       {{!-- {{{get_emoji}}} --}}
