corrected file path for login route, added logout functionality, added if/else for dashboard page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
         <a href="/dashboard">dashboard</a> 
-        <button class="no-button" id="logout">logout</button>
+        <button class="no-button" id="logout"><a href='/'>logout</a></button>
         {{else}}
         <a href="/">home</a>
         <a href="/dashboard">dashboard</a> 
@@ -37,10 +37,7 @@
     </footer>
   </div>
 
-  <!-- Render script for logged in users only -->
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
+<script src='/js/logout.js'></script>
 </body>
 
 </html>
