--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
         <a href="/dashboard">dashboard</a> 
-        <button class="no-button" id="logout"><a href='/'>logout</a></button>
+        <button id="logout">logout</button>
         {{else}}
         <a href="/">home</a>
         <a href="/dashboard">dashboard</a> 
