--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,8 +36,9 @@
       
     </footer>
   </div>
-
-<script src='/js/logout.js'></script>
+{{#if logged_in}}
+  <script src="/js/logout.js"></script>
+{{/if}}
 </body>
 
 </html>
