--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,18 +2,8 @@
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h1>this is the homepage</h1>
-    <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{!-- {{{get_emoji}}} --}}
-      <a href="../models/Post.js">{{post.title}}</a>
-    </h2>
-     <p>
-      {{!-- <span for="img" aria-label="money">💲</span> --}}
-      <!-- Pass needed_funding value to the helper function -->
-      {{!-- <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
-      needed! --}}
-    </p>
-    {{!-- <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>  --}}
+    <h2><a href="../models/Post.js">{{post.title}}</a></h2>
+    {{!-- <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p> --}}
   </div>
   <div class="col-md-7">
     <p>
