--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,12 @@
 {{#each posts as |post| }}
+{{> post-summaries}} {{!-- this will come from a partials file --}}
+{{/each}}
+
+{{!-- {{#each posts as |post| }}
 <div class="row mb-4 project">
   <div class="col-md-5">
     <h1>this is the homepage</h1>
     <h2><a href="../models/Post.js">{{post.title}}</a></h2>
-    {{!-- <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p> --}}
   </div>
   <div class="col-md-7">
     <p>
@@ -11,4 +14,4 @@
     </p>
   </div>
 </div>
-{{/each}}
+{{/each}} --}}
