added an id to the comment form and started writing javascript for post/comments html

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -13,7 +13,7 @@
 {{/each}}
 
 {{!-- this is where a user can write a comment --}}
-<form>
+<form id='comment-form'>
     <h2>Write a comment</h2>
     <div class="form-group">
         <textarea class="form-control" id="textarea" rows="3" placeholder="write your comment here..."></textarea>
